made some changes

--- a/Phase1/Simply Blogging/index.html
+++ b/Phase1/Simply Blogging/index.html
@@ -59,7 +59,7 @@
       </form>
     </div>
 
-    <div class="container-fluid" style = "margin: auto; width= 100%">
+    <div class="container" style = "margin: auto; width= 100%">
       <div class="row" id="blogspace">
 
 
