made some changes

--- a/Phase1/Simply Blogging/index.html
+++ b/Phase1/Simply Blogging/index.html
@@ -7,10 +7,19 @@
     </script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <style media="screen">
+      body{
+        background-color: black;
+      }
       .blogform{
+        background-color: silver;
         width: 70%;
         margin: auto;
         border: 1px solid black;
+        border-radius: 5px;
+      }
+      .navbar{
+        background-color: teal;
+        border-radius: 15px;
       }
       .blogspace{
         width: 90%;
@@ -19,6 +28,7 @@
       }
       h1{
         text-align: center;
+        color: aqua;
       }
       #addblogbtn{
         width: 30%;
@@ -35,7 +45,7 @@
 
       <h1>Simply Blogging</h1>
 
-      <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <nav class="navbar navbar-expand-lg navbar-light">
         <div class="collapse navbar-collapse justify-content-center" id="navbarNavAltMarkup">
           <div class="navbar-nav ">
             <a class="nav-item nav-link" href="#">Home</a>
@@ -59,7 +69,7 @@
       </form>
     </div>
 
-    <div class="container" style = "margin: auto; width= 100%">
+    <div class="container-fluid" style = 'margin: auto; width= 100%;'>
       <div class="row" id="blogspace">
 
 
